apps/helm/longhorn/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
      sectionName: internal
  hostnames:
    - "lh.kvlk.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: longhorn-frontend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
